Fixed the bug that when the screen gets narrower, the music image goes above the backward arrow by applying a z-index to that arrow close #64

--- a/home-music/home-music.css
+++ b/home-music/home-music.css
@@ -57,6 +57,8 @@ body {
 
 .container .icons .landing-page .arrow {
   transition: 0.3s ease-in-out;
+  position: relative;
+  z-index: 10;
 }
 
 .container .icons .landing-page .arrow:hover {
